tests/parser/should_pass/test-include-module-having-exports-then-include.csp
include "test-module-exports-then-include.csp"
