tests/parser/should_fail/malformed_include_1.csp
include include_2.csp
